# wubiuefi

./: .bzrignore  .gitignore  AUTHORS  MANIFEST.in  Makefile  README  README.md  THANKS  bin  pyinstaller.spec  setup.cfg  setup.py
.github/workflows/: build.yml
.github/workflows /: build.yml
data/: 7zip.conf  grub.install.cfg  isolist.ini  list.metalink  menu.install  menu.winboot  preseed.cdboot  preseed.disk  preseed.lupin  preseed.mythbuntu  refind-disk.cfg  refind-install.cfg  refind.conf  settings.py  trustedkeys.gpg  wubildr-bootstrap.cfg  wubildr-disk.cfg  wubildr.cfg
data/winboot/: wubildr  wubildr.mbr
debian/: changelog  control  control.autoppa  copyright  rules
po/: af.po  ar.po  as.po  ast.po  bg.po  bo.po  br.po  bs.po  ca.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fy.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  ignore.po  is.po  it.po  ja.po  jv.po  (+46 more)
src/: _ssl.py  main.py
src/BitTornado/: .cvsignore  download_bt1.py
src/bittorrent/: Choker.py  Connecter.py  CurrentRateMeasure.py  Downloader.py  Encrypter.py  (+24 more)
src/grub4dos/stage1/: Makefile.am  Makefile.in  stage1.h
src/grub4dos/stage1/.svn/: entries
src/grub4dos/stage1/.svn/text-base/: Makefile.in.svn-base  stage1.S.svn-base
tests/: pyflakes.exclude  run  run-pyflakes  test_backend.py
tools/: check_pyinstaller  check_winboot  check_wine  checkwine  install_external_sources  ipywine  merge_translations.sh  pyinstaller_build  pywine  test  wine
winboot/: menu.lst
wubi/: wubi.py
(+399 files in other folders)
